# voxd

./: .gitignore  ASSETS_LICENSE  AppImageBuilder.yml  LICENSE  README.md  TRADEMARKS.md  __main__.py  config.yaml  hotkey_setup.sh  launcher_setup.sh  pyproject.toml  requirements.txt  setup.sh  setup_ydotool.sh  uninstall.sh  whisp_trigger.py
.github/workflows/: build-prebuilts.yml  build-wheel.yml  release-appimage.yml  release-packages.yml
THIRD_PARTY_LICENSES/: llamacpp_MIT.txt  openai_whisper_MIT.txt  whisper_cpp_MIT.txt  ydotool_AGPLv3.txt
cli/: cli_main.py
core/: clipboard.py  config.py  logger.py  recorder.py  transcriber.py  typer.py  whisp_core.py
development/: 20250530-dev-plan.md  20250530-dev-status.md  20250605-dev-assess-plan.md  20250608-dev-plan-aipp.md  20250619-dev-refactor.md  devlog.md  project_requirements.md  test_checklist.md
gui/: main.py
packaging/: 99-uinput.rules  README.md  install_voxd.sh  nfpm.yaml  postinstall.sh  postremove.sh  voxd-tray.service  voxd-ydotoold  voxd.wrapper  ydotoold.service
src/voxd/: __main__.py  bootstrap.py  models.py  paths.py  setup_ydotool.sh
src/voxd/cli/: cli_main.py
src/voxd/core/: aipp.py  audio_preproc.py  clipboard.py  config.py  llama_server_manager.py  logger.py  model_manager.py  recorder.py  transcriber.py  typer.py  voxd_core.py
src/voxd/defaults/: default_config.yaml
src/voxd/flux/: flux_gui.py  flux_main.py  flux_tuner.py
src/voxd/gui/: gui_main.py  settings_dialog.py
src/voxd/tray/: tray_main.py
src/voxd/utils/: core_runner.py  ipc_client.py  ipc_server.py  languages.py  libw.py  performance.py  setup_user.py  setup_utils.py  whisper_auto.py
src/voxt/: __main__.py  models.py  paths.py
src/voxt/cli/: cli_main.py
src/voxt/core/: aipp.py  audio_preproc.py  clipboard.py  config.py  llama_server_manager.py  logger.py  model_manager.py  recorder.py  transcriber.py  typer.py  voxt_core.py
src/voxt/defaults/: default_config.yaml
src/whisp/: __main__.py  models.py  paths.py
src/whisp_cpp_runtime/: __init__.py
tests/: conftest.py  conftests.py  test_aipp_noop.py  test_autostart.py  test_cli_quick_actions.py  test_config.py  test_config_aipp.py  test_core_aipp.py  test_core_audio_preproc.py  test_core_clipboard.py  test_core_llama_server_manager.py  test_core_logger.py  test_core_recorder.py  test_core_typer.py  test_gui_aipp.py  test_language_transcriber.py  test_logger_save.py  test_main_routing.py  test_models.py  test_paths.py  test_setup_detect.py  test_setup_sh_dry.py  test_transcriber.py
tools/: export_reqs.py
utils/: benchmark_utils.py  core_runner.py  ipc_server.py
whisp_mode/: tray.py
(+42 files in other folders)
