[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "voxt"
dynamic = ["version"]
description = "Voice-typing helper powered by whisper.cpp"
authors = [{ name = "Jakov", email = "jakov.iv@proton.me" }]
requires-python = ">=3.9"
dependencies = [
  "sounddevice>=0.5",
  "pyqt6>=6.9",
  "platformdirs>=4.2",
  "pyyaml>=6.0",
  "pyperclip>=1.9",
  "psutil>=5.9",
  "numpy>=1.26",
  "httpx>=0.25",
  "openai>=1.14",
  "anthropic>=0.20",
  "requests>=2.28.0"
]

[project.scripts]
voxt = "voxt.__main__:main"
voxt-model = "voxt.models:_cli"

[tool.hatch.build]
package-dir = "src"
include = [
  "setup.sh",
  "setup_ydotool.sh",
  "src/voxt/assets/*.png",
  "src/voxt/defaults/*.yaml",
  "launcher_setup.sh"
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/voxt"]

[tool.hatch.build.targets.editable]
packages = ["src/voxt"]
